the sample uses now the JavaFX-Plugin for gradle