@@ -5,6 +5,7 @@
 buildscript {
   repositories {
     jcenter()
+    gradlePluginPortal()
 
     maven {
       url "https://sandec.bintray.com/repo"
@@ -13,6 +14,7 @@ buildscript {
 
   dependencies {
     classpath 'com.sandec.jpro:jpro-plugin-gradle:2019.2.3'
+    classpath 'org.openjfx:javafx-plugin:0.0.8'
   }
 }
 
@@ -22,7 +24,7 @@ buildscript {
  */
 apply plugin: 'java'
 apply plugin: 'application'
-apply plugin: 'com.google.osdetector'
+apply plugin: 'org.openjfx.javafxplugin'
 
 compileJava {
   sourceCompatibility = 11
@@ -33,38 +35,11 @@ repositories {
   jcenter()
 }
 
-ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os
-
-dependencies {
-    // Add your dependencies here, for example:
-    // compile group: 'org.controlsfx', name: 'controlsfx', version: '8.40.14'
-    compile "org.openjfx:javafx-base:11:$platform"
-    compile "org.openjfx:javafx-graphics:11:$platform"
-    compile "org.openjfx:javafx-controls:11:$platform"
-    compile "org.openjfx:javafx-fxml:11:$platform"
-    compile "org.openjfx:javafx-media:11:$platform"
-    compile "org.openjfx:javafx-web:11:$platform"
+javafx {
+    version = '11'
+    modules = [ 'javafx.base', 'javafx.graphics', 'javafx.controls', 'javafx.fxml', 'javafx.media', 'javafx.web' ]
 }
 
-
-compileJava {
-  doFirst {
-    options.compilerArgs = [
-            '--module-path', classpath.asPath,
-            '--add-modules', 'javafx.fxml,javafx.controls'
-    ]
-  }
-}
-
-
-run {
-  doFirst {
-    jvmArgs = [
-            '--module-path', classpath.asPath,
-            '--add-modules', 'javafx.fxml,javafx.controls'
-    ]
-  }
-}
 
 
 /**
